# cot-unfaithfulness

./: .env.example  .gitignore  LOG.md  NOTES.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-31-cot-unfaithfulness-skeleton-design.md  2026-06-02-phase1-suggested-answer-mmlu-design.md
results/: demos.jsonl  labels.jsonl  validation_answers.csv  validation_blind.md  validation_key.json
results/tables/: judge_validation.md  per_model_shot.md  pooled.md
scripts/: diagnose_gpt_cot.py  finish_judge.py  judge_validation.py  make_figures.py  make_tables.py  meter_cost.py  meter_microrun.py  probe_reasoning.py  project_cost.py
src/cot_unfaithfulness/: __init__.py  cli.py  config.py  judge.py
src/cot_unfaithfulness/data/: loaders.py  schema.py
src/cot_unfaithfulness/experiment/: __init__.py  demos.py  records.py  runner.py  store.py
src/cot_unfaithfulness/metrics/: agreement.py  faithfulness.py  tables.py  validation.py
src/cot_unfaithfulness/models/: client.py
src/cot_unfaithfulness/parsing/: extract.py
src/cot_unfaithfulness/prompts/: __init__.py  bias.py  builder.py
tests/: test_agreement.py  test_client.py  test_demos.py  test_extract.py  test_faithfulness.py  test_interfaces.py  test_judge.py  test_loaders.py  test_prompts.py  test_runner.py  test_store.py  test_tables.py  test_validation_score.py
